add notifications